--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">MovieDB_0706011910011</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txtTitle" />
+    <string name="txt_title">Title</string>
+    <string name="txt_genre">Genre</string>
+    <string name="txt_description">Description</string>
 </resources>
